-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.25.1beta - Nov 27, 2021

 * audio capture: don't delete the recorded file after audio device failure
 * WASAPI playback: switch to new default device after the current device goes offline
 * playlist: don't activate next track after audio device error
 - audio playback: "--dev=N" didn't work when format conversion is necessary
 - WASAPI capture: exclusive mode didn't work
 - GUI(Linux): close subprocesses correctly
 - Windows: finalize the file being recorded after Ctrl+C


fmedia v1.25beta - Nov 16, 2021

 + GUI(Linux): file explorer tab: explore files on disk directly from fmedia
    and add files to playlist without drag-n-drop from file manager app
 + GUI(Linux): "gui.editor_path" conf option
 * GUI: on exit, don't rewrite m3u playlist files unless necessary
 - .ogg(FLAC): couldn't read some files
 - .aac read: "--stream-copy -o .mp4" produced unreadable mp4 file


fmedia v1.24.1 - May 17, 2021

 - capture stream didn't work with "--dev-capture=0 --dev-loopback=N"


fmedia v1.24 - Apr 10, 2021

 + .mkv: support Opus;  support .webm;  support seeking (slightly inaccurate)
 + .mkv(Opus) -> .ogg copy: "fmedia f.mkv -o f.ogg --stream-copy"
 + .cue: support .mp4/.mkv/.mp3
 + .avi: support "pcm" codec
 + GUI(Linux): "File->Delete From Disk": move to Trash by default
 - .mkv: crash when reading tags
 - Opus decode: fix "clicks" on tracks changing;  accurate positioning


fmedia v1.23.1 - Mar 3, 2021

 - .ogg read: fix (v1.23 bug)
 - GUI (Linux): youtube downloader: save/restore settings for format and output directory


fmedia v1.23 - Feb 25, 2021

 + Windows: record from capture and loopback device in parallel into separate files:
   "--record --dev-capture=N --dev-loopback=N -o rec$counter.wav"
 + GUI (Linux): Help->QuickCommand: dialog with all menu commands in one list