@@ -202,6 +202,7 @@ FMT_O := $(OBJ_DIR)/mod-fmt.o \
 	$(OBJ_DIR)/mkv.o \
 	$(OBJ_DIR)/mp3.o \
 	$(OBJ_DIR)/mp4.o \
+	$(OBJ_DIR)/mpc-read.o \
 	$(OBJ_DIR)/ogg.o \
 	$(OBJ_DIR)/wav.o \
 	$(OBJ_DIR)/wv.o \
